2008-04-08  Alice Liu  <alice.liu@apple.com>

Reviewed by Dan Bernstein.

        fixed http://bugs.webkit.org/show_bug.cgi?id=18329
        REGRESSION: Assertion failure in -[WebViewFactory endOfTextMarkerRange:]
        when invoking the Dictionary pop-up

        * page/mac/AccessibilityObjectWrapper.mm:
        (-[AccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):
        In the section of code where WebCore-equivalents of mac-specific types are
        prepared, some functions weren't meant to operate on the default initialized
        values.  Checking for nil in certain places will better maintain the original
        pre-refactoring code path.



Canonical link: https://commits.webkit.org/25277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31720 268f45cc-cd09-0410-ab3c-d52691b4dbfc